@@ -18,6 +18,7 @@
 // Tevatron
 #include "Rivet/Analyses/CDF_1994_S2952106.hh"
 #include "Rivet/Analyses/CDF_2001_S4751469.hh"
+#include "Rivet/Analyses/CDF_2004_S5839831.hh"
 #include "Rivet/Analyses/CDF_2005_S6217184.hh"
 #include "Rivet/Analyses/CDF_2006_S6653332.hh"
 #include "Rivet/Analyses/CDF_2007_S7057202.hh"
@@ -50,6 +51,7 @@ extern "C" {
     // Tevatron
     fns["CDF_1994_S2952106"] = Rivet::CDF_1994_S2952106::create;
     fns["CDF_2001_S4751469"] = Rivet::CDF_2001_S4751469::create;
+    fns["CDF_2004_S5839831"] = Rivet::CDF_2004_S5839831::create;
     fns["CDF_2005_S6217184"] = Rivet::CDF_2005_S6217184::create;
     fns["CDF_2006_S6653332"] = Rivet::CDF_2006_S6653332::create;
     fns["CDF_2007_S7057202"] = Rivet::CDF_2007_S7057202::create;
